--- a/.github/workflows/app-build.yml
+++ b/.github/workflows/app-build.yml
@@ -35,7 +35,7 @@ jobs:
       id: docker_build
       uses: docker/build-push-action@v2
       with:
-        context: /
+        context: app
         platforms: linux/amd64,linux/arm64
         push: true
         tags: ghcr.io/launhpencil/testtimer:latest
